# ROS-AI-Engineer-1-1.0

./: .gitignore  GEMINI.md  README.md  benchmark_startup.py  capture_images.py  capture_now.ps1  check_hardware.py  check_nodes.py  gemini-cli-settings-example.json  launch_camera.py  launch_driver.ps1  minimal_server.py  push_to_github.ps1  pyproject.toml  realsense_publisher.py  run_rosa_mcp.ps1  run_rosa_mcp.sh  setup_ros2.ps1  test_realsense.py  test_tools.py
scripts/: setup_gemini_config.py
src/rosa_mcp_server/: __init__.py  __main__.py  actuators.py  server.py
